--- a/package.json
+++ b/package.json
@@ -2,14 +2,43 @@
 	"name": "demo",
 	"version": "1.0.0",
 	"description": "",
-	"main": "main.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
 	"author": "",
-	"license": "ISC",
+	"type": "module",
+	"resolutions": {
+		"bin-wrapper": "npm:bin-wrapper-china"
+	},
+	"engines": {
+		"node": "^18.0.0 || ^20.0.0"
+	},
+	"scripts": {
+		"svgo": "svgo -f /assets/images",
+		"lint": "npm-run-all -s lint:eslint lint:stylelint lint:prettier",
+		"lint:eslint": "eslint . --cache --fix",
+		"lint:stylelint": "stylelint \"pages/**/*.{css,scss,vue}\" --cache --fix",
+		"lint:prettier": "prettier --write .",
+		"lint:lint-staged": "lint-staged",
+		"postinstall": "simple-git-hooks",
+		"preinstall": "npx only-allow pnpm"
+	},
 	"devDependencies": {
+		"npm-run-all": "^4.1.5",
 		"unplugin-auto-import": "^0.17.5"
+	},
+	"dependencies": {
+		"eslint": "^9.1.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-define-config": "^2.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-vue": "^9.25.0",
+		"lint-staged": "^15.2.2",
+		"prettier": "^3.2.5",
+		"simple-git-hooks": "^2.11.1",
+		"stylelint": "^16.3.1",
+		"stylelint-config-recess-order": "^5.0.1",
+		"stylelint-config-standard-scss": "^13.1.0",
+		"stylelint-config-standard-vue": "^1.0.0",
+		"stylelint-scss": "^6.2.1",
+		"svgo": "^3.2.0"
 	},
 	"uni-app": {
 		"scripts": {
