--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
 		"stylelint-scss": "^6.2.1",
 		"svgo": "^3.2.0"
 	},
+	"simple-git-hooks": {
+		"pre-commit": "npx lint-staged",
+		"preserveUnused": true
+	},
 	"uni-app": {
 		"scripts": {
 			"mp-dingtalk": {
