--- a/package.json
+++ b/package.json
@@ -1,44 +1,12 @@
 {
-	"name": "demo",
+	"name": "uni-app",
 	"version": "1.0.0",
-	"description": "",
-	"author": "",
-	"type": "module",
-	"resolutions": {
-		"bin-wrapper": "npm:bin-wrapper-china"
-	},
-	"engines": {
-		"node": "^18.0.0 || ^20.0.0"
-	},
 	"scripts": {
-		"svgo": "svgo -f /assets/images",
-		"lint": "npm-run-all -s lint:eslint lint:stylelint lint:prettier",
-		"lint:eslint": "eslint . --cache --fix",
-		"lint:stylelint": "stylelint \"pages/**/*.{css,scss,vue}\" --cache --fix",
-		"lint:prettier": "prettier --write .",
-		"lint:lint-staged": "lint-staged",
-		"postinstall": "simple-git-hooks",
-		"preinstall": "npx only-allow pnpm"
+		"svgo": "svgo -f /static/images"
 	},
 	"devDependencies": {
-		"npm-run-all": "^4.1.5",
+		"svgo": "^3.2.0",
 		"unplugin-auto-import": "^0.17.5"
-	},
-	"dependencies": {
-		"eslint": "^9.1.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-define-config": "^2.1.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-vue": "^9.25.0",
-		"lint-staged": "^15.2.2",
-		"prettier": "^3.2.5",
-		"simple-git-hooks": "^2.11.1",
-		"stylelint": "^16.3.1",
-		"stylelint-config-recess-order": "^5.0.1",
-		"stylelint-config-standard-scss": "^13.1.0",
-		"stylelint-config-standard-vue": "^1.0.0",
-		"stylelint-scss": "^6.2.1",
-		"svgo": "^3.2.0"
 	},
 	"simple-git-hooks": {
 		"pre-commit": "npx lint-staged",
@@ -60,7 +28,7 @@
 				"browser": "chrome",
 				"env": {
 					"UNI_PLATFORM": "h5",
-					"NODE_ENV_NAME": "development"
+					"ENV_TYPE": "development"
 				},
 				"define": {
 					"CUSTOM-CONST": true
@@ -71,7 +39,7 @@
 				"browser": "chrome",
 				"env": {
 					"UNI_PLATFORM": "h5",
-					"NODE_ENV_NAME": "test"
+					"ENV_TYPE": "test"
 				},
 				"define": {
 					"CUSTOM-CONST": true
@@ -82,7 +50,7 @@
 				"browser": "chrome",
 				"env": {
 					"UNI_PLATFORM": "h5",
-					"NODE_ENV_NAME": "production"
+					"ENV_TYPE": "production"
 				},
 				"define": {
 					"CUSTOM-CONST": true
