--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
 		"commit": "git pull && git add -A && git-cz && git push"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^19.3.0",
+		"@commitlint/config-conventional": "^19.2.2",
+		"commitizen": "^4.3.0",
+		"cz-git": "^1.9.1",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"prettier": "^3.2.5",
 		"svgo": "^3.2.0",
 		"unplugin-auto-import": "^0.17.5"
+	},
+	"config": {
+		"commitizen": {
+			"path": "node_modules/cz-git"
+		}
 	},
 	"uni-app": {
 		"scripts": {
