--- a/package.json
+++ b/package.json
@@ -6,23 +6,17 @@
 		"lint:prettier": "prettier --write .",
 		"prepare": "husky",
 		"lint:lint-staged": "lint-staged",
-		"commit": "git pull && git add -A && git-cz && git push"
+		"commit": "git pull && git add -A && git push",
+		"preinstall": "npx only-allow pnpm"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.3.0",
 		"@commitlint/config-conventional": "^19.2.2",
-		"commitizen": "^4.3.0",
-		"cz-git": "^1.9.1",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"prettier": "^3.2.5",
 		"svgo": "^3.2.0",
 		"unplugin-auto-import": "^0.17.5"
-	},
-	"config": {
-		"commitizen": {
-			"path": "node_modules/cz-git"
-		}
 	},
 	"uni-app": {
 		"scripts": {
