--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"lint:prettier": "prettier --write .",
 		"lint:lint-staged": "lint-staged",
 		"prepare": "husky",
-		"commit": "git pull && git add -A && git push",
+		"commit": "git pull && git add -A && git-cz && git push",
 		"preinstall": "npx only-allow pnpm"
 	},
 	"devDependencies": {
