--- a/package.json
+++ b/package.json
@@ -5,25 +5,19 @@
 		"svgo": "svgo -f /static/images",
 		"lint:prettier": "prettier --write .",
 		"lint:lint-staged": "lint-staged",
-		"prepare": "husky",
-		"commit": "git pull && git add -A && git-cz && git push",
+		"postinstall": "simple-git-hooks",
 		"preinstall": "npx only-allow pnpm"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2",
-		"commitizen": "^4.3.0",
-		"cz-git": "^1.9.1",
-		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"prettier": "^3.2.5",
+		"simple-git-hooks": "^2.11.1",
 		"svgo": "^3.2.0",
 		"unplugin-auto-import": "^0.17.5"
 	},
-	"config": {
-		"commitizen": {
-			"path": "node_modules/cz-git"
-		}
+	"simple-git-hooks": {
+		"pre-commit": "npx lint-staged",
+		"preserveUnused": true
 	},
 	"uni-app": {
 		"scripts": {
